--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="style1.css" href="style1.css">
+    <link rel="Style1.css" href="Style1.css">
     <title>Project 1</title>
 </head>
 <body>
