--- a/project1.html
+++ b/project1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<heads>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Style1.css" href="Style1.css">
+    <link rel="Stylesheet" href="Style1.css">
     <title>Project 1</title>
 </head>
 <body>
