--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <heads>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="Style1.css">
+    <link rel="stylesheet" href="Style1.css">
     <title>Project 1</title>
 </head>
 <body>
