--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>
             <a href= "project7.html"> Project 7 </a> 
         </li>
+        <li>
+            <a href= "project8.html"> Project 8 </a> 
+        </li>
 
         <li>
             <a href= "Reflection.html"> Reflection </a> 
