--- a/index.html
+++ b/index.html
@@ -13,34 +13,35 @@
 
     <ul>
         <li> 
-            <a href= "project1.html"> Project 1 </a> 
+            <a href= "project1.html"> Lost And Found </a> 
         </li>
 
         <li> 
-            <a href= "project2.html"> Project 2 </a> 
+            <a href= "project2.html"> Face Generator </a> 
         </li>
 
         <li>
-             <a href= "project3.html"> Project 3 </a> 
+             <a href= "project3.html"> Experimental Clock </a> 
         </li>
 
         <li>
-            <a href= "project4.html"> Project 4 </a> 
+            <a href= "project4.html"> Exquisite Corpse </a> 
         </li>
 
         <li>
-             <a href= "project5.html"> Project 5 </a> 
+             <a href= "project5.html"> Optical Illusion </a> 
         </li>
 
         <li>
-            <a href= "project6.html"> Project 6 </a> 
+            <a href= "project6.html"> Data Portrait </a> 
+        </li>
+         <li>
+            <a href= "project7.html"> Autobiographical Game </a> 
         </li>
 
+
         <li>
-            <a href= "project7.html"> Project 7 </a> 
-        </li>
-        <li>
-            <a href= "project8.html"> Project 8 </a> 
+            <a href= "projectt.html"> Lock System </a> 
         </li>
 
         <li>
