--- a/project8.html
+++ b/project8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style1.css">
-    <title>Project 1</title>
+    <title>Project 8</title>
     
 </head>
 <body>
@@ -17,10 +17,10 @@
     <h3>In this project I created a automated lock system </h3>
 </div>
 
-<div style="text-align: center;">
+<!-- <div style="text-align: center;">
     <iframe src="https://editor.p5js.org/tavan388/full/ltfldq5eC9" width = "400px" height = "400px"></iframe>
 </div>
-<script src="sketch.js"></script>
+<script src="sketch.js"></script> -->
     <br>
     <a href="index.html">home</a>
     <div style="text-align: center;">
