--- a/project8.html
+++ b/project8.html
@@ -14,7 +14,7 @@
 
 <div class = "middle-content">
     <h2> Reflection</h2>
-    <h3>In this project I created a automated lock system </h3>
+    <h3>In this project I created a automated lock system, that controls my lights and the web browser my computer is connected to.</h3>
 </div>
 
 <!-- <div style="text-align: center;">
