--- a/project8.html
+++ b/project8.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style1.css">
-    <title>Project 8</title>
-    
+    <title>Lock System</title>
 </head>
 <body>
 <div class = "top-content">
@@ -14,18 +13,10 @@
 
 <div class = "middle-content">
     <h2> Reflection</h2>
-    <h3>In this project I created a automated lock system, that controls my lights and the web browser my computer is connected to.</h3>
+    <h3>Lock system that controls my room. </h3>
 </div>
 
-<!-- <div style="text-align: center;">
-    <iframe src="https://editor.p5js.org/tavan388/full/ltfldq5eC9" width = "400px" height = "400px"></iframe>
-</div>
-<script src="sketch.js"></script> -->
     <br>
     <a href="index.html">home</a>
-    <div style="text-align: center;">
-        <img src = 'Lock.jpeg' width="20%">
-    </div>
 </body>
-
 </html>
