--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 
         <li>
-            <a href= "projectt.html"> Lock System </a> 
+            <a href= "project8.html"> Lock System </a> 
         </li>
 
         <li>
-            <a href= "Reflection.html"> Reflection </a> 
+            <a href= "reflection.html"> Reflection </a> 
         </li>
     </ul>
 </div>
