--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <li>
-            <a href= "project8.html"> Lock System </a> 
+            <a href= "project8.html"> Lock System! </a> 
         </li>
 
         <li>
